cm4all-workshop (6.7) unstable; urgency=low

  * cron: improve schedule parser error message
  * spawn: allow HOME inside a BIND_MOUNT
  * translation: add packet BIND_MOUNT_RW_EXEC

 --   

cm4all-workshop (6.6) unstable; urgency=low

  * translation: add packets TMPFS_DIRS_READABLE, SYMLINK

 -- Max Kellermann <mk@cm4all.com>  Wed, 05 Feb 2025 08:37:20 +0100

cm4all-workshop (6.5) unstable; urgency=low

  * spawn: forbid the "listmount" and "statmount" system calls

 -- Max Kellermann <mk@cm4all.com>  Mon, 09 Dec 2024 17:42:38 +0100

cm4all-workshop (6.4) unstable; urgency=low

  * qmqp: fix buffer overflow in netstring header parser
  * spawn: mount `proc` with "hidepid=1,subset=pid"
  * cron: do not log "lost race to schedule job" by default

 -- Max Kellermann <mk@cm4all.com>  Wed, 27 Nov 2024 16:17:16 +0100

cm4all-workshop (6.3) unstable; urgency=low

  * spawn: fix 6.2 regressions

 -- Max Kellermann <mk@cm4all.com>  Thu, 21 Nov 2024 15:48:43 +0100

cm4all-workshop (6.2) unstable; urgency=low

  * spawn: do not log "failed to kill: No such process"
  * translation: add packets CAP_SYS_RESOURCE, CHROOT

 -- Max Kellermann <mk@cm4all.com>  Tue, 12 Nov 2024 12:38:01 +0100

cm4all-workshop (6.1) unstable; urgency=low

  * merge release 5.6
  * reduce HTTP and QMQP delay
  * cron: report spawner errors
  * cron: fix HTTP response data in "cronresults" table
  * cron: report CURL errors
  * cron: limit HTTP requests to 1 minute

 -- Max Kellermann <mk@cm4all.com>  Wed, 10 Jul 2024 14:40:54 +0200

cm4all-workshop (6.0.31) unstable; urgency=low

  * cron: log email notification errors with job id and site name
  * cron: sanitize QMQP error messages when logging them

 -- Max Kellermann <mk@cm4all.com>  Wed, 19 Jun 2024 12:27:14 +0200

cm4all-workshop (6.0.30) unstable; urgency=low

  * control: fix socket deregistration bug after malformed packet

 -- Max Kellermann <mk@cm4all.com>  Sat, 08 Jun 2024 09:27:08 +0200

cm4all-workshop (6.0.29) unstable; urgency=low
