@@ -1,6 +1,7 @@
 cm4all-workshop (6.7) unstable; urgency=low
 
   * cron: improve schedule parser error message
+  * cron: case-insensitive month/day name parser
   * spawn: allow HOME inside a BIND_MOUNT
   * translation: add packet BIND_MOUNT_RW_EXEC
 
